layout advanced search and grammer correction is done